Fix sleep issue

--- a/OC/config.plist
+++ b/OC/config.plist
@@ -333,6 +333,22 @@
 				<key>BundlePath</key>
 				<string>SMCAMDProcessor.kext</string>
 			</dict>
+			<dict>
+				<key>Comment</key>
+				<string></string>
+				<key>MaxKernel</key>
+				<string></string>
+				<key>PlistPath</key>
+				<string>Contents/Info.plist</string>
+				<key>Enabled</key>
+				<true/>
+				<key>MinKernel</key>
+				<string></string>
+				<key>ExecutablePath</key>
+				<string></string>
+				<key>BundlePath</key>
+				<string>AorusPro-USB.kext</string>
+			</dict>
 		</array>
 		<key>Block</key>
 		<array>
